Fix heights to ensure no white space below footer

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -24,7 +24,8 @@ header {
 
 @media (max-width: 576px) {
 	header,
-	.headerLogo {
+	.nusLogo,
+	.ccsgpLogo {
 		height: 0;
 	}
 }
