--- a/src/components/JOBS/JobDetails/JobDetails.module.css
+++ b/src/components/JOBS/JobDetails/JobDetails.module.css
@@ -3,7 +3,8 @@
 	display: flex;
 	padding-top: 1rem;
 	justify-content: center;
-	align-items: center;
+	/* align-items: center; */
+	min-height: calc(100vh - 620px);
 }
 
 .wrapper {
